--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.7.2",
     "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "schedule": "^0.5.0"
   }
